[gd_scene load_steps=20 format=3 uid="uid://cb871h26hyma4"]

[ext_resource type="Script" uid="uid://dqlp0fej2gakw" path="res://scripts/cannon.gd" id="1_pxhkx"]
[ext_resource type="Texture2D" uid="uid://dewlhxrpqtyj3" path="res://assets/10-Cannon/Idle.png" id="1_xuqfy"]
[ext_resource type="Texture2D" uid="uid://se2pdq2uteot" path="res://assets/10-Cannon/bullet_explosion.png" id="2_22shy"]
[ext_resource type="Texture2D" uid="uid://fff60es0xo6p" path="res://assets/10-Cannon/Shoot (44x28).png" id="3_yjxeu"]
[ext_resource type="AudioStream" uid="uid://3woi6a1kwub" path="res://assets/audio/bombLong.ogg" id="4_jfr8q"]
[ext_resource type="AudioStream" uid="uid://ds03md6xk2h8e" path="res://assets/audio/bombDestroy.ogg" id="6_8ssa1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uvlre"]
atlas = ExtResource("2_22shy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogt75"]
atlas = ExtResource("2_22shy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a4je"]
atlas = ExtResource("2_22shy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ediu4"]
atlas = ExtResource("2_22shy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vda2x"]
atlas = ExtResource("2_22shy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2udb"]
atlas = ExtResource("2_22shy")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfr8q"]
atlas = ExtResource("1_xuqfy")
region = Rect2(0, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0285d"]
atlas = ExtResource("3_yjxeu")
region = Rect2(0, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_22shy"]
atlas = ExtResource("3_yjxeu")
region = Rect2(44, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ssa1"]
atlas = ExtResource("3_yjxeu")
region = Rect2(88, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5saov"]
atlas = ExtResource("3_yjxeu")
region = Rect2(132, 0, 44, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_uvlre"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvlre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogt75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a4je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ediu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vda2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2udb")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfr8q")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0285d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22shy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ssa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5saov")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxhkx"]
size = Vector2(22, 18)

[node name="Cannon" type="StaticBody2D"]
script = ExtResource("1_pxhkx")

[node name="CannonSpriteAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uvlre")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, 2)
shape = SubResource("RectangleShape2D_pxhkx")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(-7, -5)
gizmo_extents = 10.2

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jfr8q")
bus = &"SFX"

[node name="SfxExplosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8ssa1")
bus = &"SFX"

[connection signal="animation_finished" from="CannonSpriteAnimation" to="." method="_on_cannon_sprite_animation_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="SfxExplosion" to="." method="_on_sfx_explosion_finished"]
